# mireforge

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: build.yml
crates/advanced-game/: Cargo.toml
crates/advanced-game/src/: audio.rs  lib.rs  logic.rs  render.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  prelude.rs  system_types.rs
crates/app/tests/: systems.rs
crates/asset-id/src/: lib.rs
crates/asset-registry/: Cargo.toml
crates/assets-loader/: Cargo.toml
crates/assets-loader/src/: lib.rs
crates/assets/src/: lib.rs
crates/audio/: Cargo.toml
crates/audio-sample/: Cargo.toml
crates/audio-sample/src/: lib.rs
crates/audio/src/: lib.rs  low_level.rs  mixer.rs
crates/boot/: Cargo.toml
crates/boot-advanced-game/: Cargo.toml
crates/boot-advanced-game/src/: lib.rs
crates/boot-game/: Cargo.toml
crates/boot-game/src/: lib.rs  prelude.rs
crates/boot/src/: lib.rs
crates/examples/: Cargo.toml  README.md
crates/examples/examples/: animation.rs  font.rs  font_glyphs.rs  gamepad.rs  single_texture.rs  tilemap.rs  viewport_physical_size.rs
crates/examples/scripts/: build.sh  index.html
crates/examples/src/: main.rs
crates/font/: Cargo.toml
crates/font/src/: lib.rs
crates/game/: Cargo.toml
crates/game-assets/: Cargo.toml  README.md
crates/game-assets/src/: lib.rs
crates/game-audio/: Cargo.toml
crates/game-audio/src/: lib.rs
crates/game/src/: lib.rs  prelude.rs
crates/loader/: Cargo.toml
crates/loader-plugin/: Cargo.toml
crates/local-resource/: Cargo.toml
crates/material/: Cargo.toml
crates/material/src/: lib.rs  prelude.rs
crates/mireforge/: Cargo.toml  README.md
crates/mireforge/src/: lib.rs  prelude.rs
crates/render/: Cargo.toml
crates/render-wgpu/: Cargo.toml  README.md
crates/render-wgpu/src/: gfx.rs  gfx_impl.rs  lib.rs  plugin.rs  prelude.rs
crates/render/src/: anim.rs  lib.rs  prelude.rs
crates/swamp/: Cargo.toml  README.md
crates/swamp-app/: Cargo.toml  README.md
crates/swamp-app/src/: app.rs  lib.rs  prelude.rs  system_types.rs
crates/swamp-app/tests/: app.rs  systems.rs
crates/swamp-asset-id/: Cargo.toml
crates/swamp-asset-id/src/: lib.rs  owner.rs
crates/swamp-asset-id/tests/: asset_id.rs
crates/swamp-asset-registry/: Cargo.toml
crates/swamp-asset-registry/src/: id_gen.rs  idx_gen.rs  lib.rs
crates/swamp-assets/: Cargo.toml  README.md
crates/swamp-assets-loader/: Cargo.toml
crates/swamp-assets-loader/src/: lib.rs
crates/swamp-assets-loader/tests/: asset.rs
crates/swamp-assets/src/: lib.rs  prelude.rs
crates/swamp-audio/: Cargo.toml
crates/swamp-audio/src/: low_level.rs  mixer.rs
crates/swamp-basic-input/: Cargo.toml
crates/swamp-basic-input/src/: button.rs  key.rs  lib.rs  prelude.rs
crates/swamp-boot/: Cargo.toml
crates/swamp-boot-game/: Cargo.toml
crates/swamp-boot-game/src/: lib.rs  prelude.rs
crates/swamp-boot/src/: lib.rs
crates/swamp-font/: Cargo.toml
crates/swamp-font/src/: lib.rs
crates/swamp-game/: Cargo.toml
crates/swamp-game-wgpu/: Cargo.toml
crates/swamp-game-wgpu/src/: lib.rs  prelude.rs
crates/swamp-game/src/: lib.rs  prelude.rs
crates/swamp-loader/: Cargo.toml  README.md
crates/swamp-loader-plugin/: Cargo.toml
crates/swamp-loader-plugin/src/: lib.rs
crates/swamp-loader/src/: lib.rs
crates/swamp-log/: Cargo.toml
crates/swamp-log/src/: lib.rs  prelude.rs
crates/swamp-macros/: Cargo.toml  README.md
crates/swamp-macros/src/: lib.rs
crates/swamp-material/: Cargo.toml
crates/swamp-material/src/: lib.rs
crates/swamp-message/: Cargo.toml  README.md
crates/swamp-message/src/: lib.rs  prelude.rs
crates/swamp-message/tests/: messages.rs
crates/swamp-render/: Cargo.toml
crates/swamp-render-wgpu/: Cargo.toml  README.md
crates/swamp-render-wgpu/src/: lib.rs  plugin.rs  prelude.rs
crates/swamp-render/src/: anim.rs  lib.rs  prelude.rs
crates/swamp-resource/: Cargo.toml  README.md
crates/swamp-resource/src/: lib.rs  prelude.rs
crates/swamp-screen/: Cargo.toml
crates/swamp-screen/src/: lib.rs
crates/swamp-system/: Cargo.toml
crates/swamp-system-runner/: Cargo.toml
crates/swamp-system-runner/src/: lib.rs  schedule.rs
crates/swamp-system-state/: Cargo.toml
crates/swamp-system-state/src/: lib.rs
crates/swamp-system/src/: lib.rs
crates/swamp-wgpu/: Cargo.toml  README.md
crates/swamp-wgpu-math/: Cargo.toml  README.md
crates/swamp-wgpu-math/src/: lib.rs
crates/swamp-wgpu-sprites/: Cargo.toml  README.md
crates/swamp-wgpu-sprites/src/: lib.rs
crates/swamp-wgpu-window/: Cargo.toml  README.md
crates/swamp-wgpu-window/src/: lib.rs
crates/swamp-wgpu/src/: lib.rs
crates/swamp-window/: Cargo.toml  README.md
crates/swamp-window-runner/: Cargo.toml
crates/swamp-window-runner/src/: convert.rs  lib.rs
crates/swamp-window/examples/: window.rs
crates/swamp-window/src/: lib.rs
crates/swamp/src/: lib.rs  prelude.rs
crates/wgpu/: Cargo.toml  README.md
crates/wgpu-sprites/: Cargo.toml  README.md
crates/wgpu-sprites/src/: lib.rs
crates/wgpu-window/: Cargo.toml
crates/wgpu/src/: lib.rs
crates/window-runner/: Cargo.toml
crates/window-runner/src/: lib.rs
scripts/: RELEASE.md  changelog.yaml
