# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = [
    "crates/examples",
    "crates/app",
    "crates/wgpu-window",
    "crates/wgpu-sprites",
    "crates/wgpu",
    "crates/examples",
    "crates/wgpu-math",
    "crates/swamp",
    "crates/window",
    "crates/game",
    "crates/window-runner",
    "crates/boot",
    "crates/log",
    "crates/basic-input",
    "crates/message",
    "crates/resource",
    "crates/render",
    "crates/render-wgpu",
    "crates/boot-game",
    "crates/screen",
    "crates/macros",
    "crates/assets",
    "crates/assets-loader",
    "crates/loader",
    "crates/loader-plugin",
    "crates/material",
    "crates/system-state",
    "crates/system",
    "crates/system-runner",
    "crates/asset-registry",
    "crates/font"
    , "crates/asset-id", "crates/audio", "crates/local-resource", "crates/audio-sample", "crates/game-assets"]
