[package]
name = "mireforge-advanced-game"
version = "0.0.22"
edition = "2024"
license = "MIT"
description = "advanced game (logic, render, audio)"
repository = "https://github.com/mireforge/mireforge"
categories = ["game-development"]

[dependencies]
tracing = "0.1.40"
int_math = "0.0.2"

mireforge-render = { path = "../render", version = "0.0.22" }
mireforge-render-wgpu = { path = "../render-wgpu", version = "0.0.22" }

monotonic-time-rs = "0.0.9"

mireforge-game-assets = { path = "../game-assets", version = "0.0.22" }
mireforge-game-audio = { path = "../game-audio", version = "0.0.22" }


# Limnus
limnus-assets = "0.0.19"
limnus-app = "0.0.19"
limnus-resource = "0.0.19"
limnus-local-resource = "0.0.19"
limnus-system-params =  "0.0.19"
limnus-screen = "0.0.19"
limnus-audio-mixer = "0.0.19"
limnus-basic-input = "0.0.19"
limnus-message = "0.0.19"
limnus-gamepad = "0.0.19"
limnus-default-stages = "0.0.19"
fixed32 = "0.0.18"
