[package]
name = "mireforge-advanced-game"
version = "0.0.25"
edition = "2024"
license = "MIT"
description = "advanced game (logic, render, audio)"
repository = "https://github.com/mireforge/mireforge"
categories = ["game-development"]

[dependencies]
tracing = "0.1.40"
int_math = "0.0.2"

mireforge-render = { path = "../render", version = "0.0.25" }
mireforge-render-wgpu = { path = "../render-wgpu", version = "0.0.25" }

monotonic-time-rs = "0.0.9"

mireforge-game-assets = { path = "../game-assets", version = "0.0.25" }
mireforge-game-audio = { path = "../game-audio", version = "0.0.25" }


# Limnus
limnus-assets = "0.0.20"
limnus-app = "0.0.20"
limnus-resource = "0.0.20"
limnus-local-resource = "0.0.20"
limnus-system-params =  "0.0.20"
limnus-screen = "0.0.20"
limnus-audio-mixer = "0.0.20"
limnus-basic-input = "0.0.20"
limnus-message = "0.0.20"
limnus-gamepad = "0.0.20"
limnus-default-stages = "0.0.20"
fixed32 = "0.0.18"
