[package]
name = "swamp-assets-loader"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "loads assets"

[dependencies]
swamp-app = { path = "../app", version = "0.0.10" }
swamp-loader = { path = "../loader", version = "0.0.10" }
message-channel = "0.0.1"
swamp-assets = { path = "../assets", version = "0.0.10" }
swamp-resource = { path = "../resource", version = "0.0.10" }
swamp-loader-plugin = { path = "../loader-plugin", version = "0.0.10" }
tracing = "0.1.40"
hashbrown = "0.15.1"
chunk-reader = "0.0.1"

[dev-dependencies]
tokio = "1.41.1"
image = "0.25.5"
test-log = { version = "0.2.16", features = ["trace"] }
