[package]
name = "mireforge-boot-advanced-game"
version = "0.0.27"
edition = "2024"
license = "MIT"
description = "boot up an advanced game (logic, render, audio)"
repository = "https://github.com/mireforge/mireforge"
categories = ["game-development"]

[dependencies]
mireforge-advanced-game = { path = "../advanced-game", version = "0.0.27" }
mireforge-material = { path = "../material", version = "0.0.27" }
mireforge-render-wgpu = { path = "../render-wgpu", version = "0.0.27" }
mireforge-font = { path = "../font", version = "0.0.27" }

int_math = "0.0.2"

# Limnus
# limnus-app = "0.1.0"
# limnus-screen = "0.1.0"

limnus = { version = "0.1.0", default-features = false } # # TODO: Move DefaultPlugins
