[package]
name = "swamp-boot"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "Collection of plugins to boot a swamp-app"


[dependencies]
swamp-app = { path = "../app", version = "0.0.10" }
swamp-window-runner = { path = "../window-runner", version = "0.0.10" }
swamp-wgpu-window = { path = "../wgpu-window", version = "0.0.10" }
swamp-log = { path = "../log", version = "0.0.10" }
swamp-assets-loader = { path = "../assets-loader", version = "0.0.10" }
swamp-loader-plugin = { path = "../loader-plugin", version = "0.0.10" }
swamp-asset-image = { path = "../material", version = "0.0.10" }
swamp-render-wgpu = { path = "../render-wgpu", version = "0.0.10" }
swamp-asset-registry = { path = "../asset-registry", version = "0.0.10" }
swamp-font = { path = "../font", version = "0.0.10" }

swamp-audio = { path = "../audio", version = "0.0.10", optional = true }
swamp-audio-sample = { path = "../audio-sample", version = "0.0.10" }


[features]
default = []
audio = ["swamp-audio"]
