[package]
name = "swamp-examples"
version = "0.0.16-alpha.2"
edition = "2024"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
keywords = ["examples"]
description = "Examples for the swamp 2D game engine"

[dependencies]
swamp = { path = "../swamp", version = "0.0.16-alpha.2", features = ["audio"] }
