[package]
name = "mireforge-examples"
version = "0.0.24"
edition = "2024"
repository = "https://github.com/mireforge/mireforge"
license = "MIT"
categories = ["game-development"]
keywords = ["examples"]
description = "Examples for the mireforge 2D game engine"

[dependencies]
mireforge = { path = "../mireforge", version = "0.0.24", features = ["audio"] }
