[package]
name = "mireforge-font"
version = "0.0.19"
edition = "2024"
repository = "https://github.com/mireforge/mireforge"
license = "MIT"
categories = ["game-development"]
description = "Font asset loading"

[dependencies]
bmf-parser = "0.0.1"

tracing = "0.1.40"
int_math = "0.0.2"

# Limnus
limnus-assets = "0.0.17"
limnus-app = "0.0.17"
limnus-assets-loader = "0.0.17"
limnus-asset-registry = "0.0.17"
limnus-local-resource = "0.0.17"
