[package]
name = "mireforge-font"
version = "0.0.22"
edition = "2024"
repository = "https://github.com/mireforge/mireforge"
license = "MIT"
categories = ["game-development"]
description = "Font asset loading"

[dependencies]
bmf-parser = "0.0.2"

tracing = "0.1.40"
int_math = "0.0.2"

# Limnus
limnus-assets = "0.0.19"
limnus-app = "0.0.19"
limnus-assets-loader = "0.0.19"
limnus-asset-registry = "0.0.19"
limnus-local-resource = "0.0.19"
