[package]
name = "mireforge-game-assets"
version = "0.0.26"
edition = "2024"
repository = "https://github.com/mireforge/mireforge"
license = "MIT"
categories = ["game-development"]
description = "Game asset loading"

[dependencies]
mireforge-font = { path = "../font", version = "0.0.26" }
mireforge-render-wgpu = { path = "../render-wgpu", version = "0.0.26" }

# Limnus
limnus-assets = "0.0.20"
limnus-asset-registry = "0.0.20"
limnus-resource = "0.0.20"
limnus-asset-id = "0.0.20"
limnus-audio-mixer = "0.0.20"

int_math = "0.0.2"
monotonic-time-rs = "0.0.9"
