[package]
name = "swamp-game-audio"
version = "0.0.10"
edition = "2021"

[dependencies]
swamp-audio-sample = { path = "../audio-sample", version = "0.0.10" }
swamp-audio = { path = "../audio", version = "0.0.10" }
swamp-assets = { path = "../assets", version = "0.0.10" }
oddio = "0.7.4"
tracing = "0.1.40"
