[package]
name = "swamp-game-audio"
version = "0.0.11"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "Game audio"

[dependencies]
limnus-audio-sample = "0.0.10"
limnus-audio-mixer = "0.0.10"
limnus-assets = "0.0.10"

tracing = "0.1.40"
