[package]
name = "mireforge-game"
version = "0.0.25"
edition = "2024"
repository = "https://github.com/mireforge/mireforge"
license = "MIT"
categories = ["game-development"]
description = "common mireforge game types"


[dependencies]
mireforge-render = { path = "../render", version = "0.0.25" }
mireforge-render-wgpu = { path = "../render-wgpu", version = "0.0.25" }
mireforge-game-assets = { path = "../game-assets", version = "0.0.25" }
mireforge-game-audio = { path = "../game-audio", version = "0.0.25" }

# Limnus
limnus-assets = "0.0.19"
limnus-app = "0.0.19"
limnus-resource = "0.0.19"
limnus-local-resource = "0.0.19"
limnus-system-params =  "0.0.19"
limnus-screen = "0.0.19"
limnus-audio-mixer = "0.0.19"
limnus-basic-input = "0.0.19"
limnus-message = "0.0.19"
limnus-gamepad = "0.0.19"
limnus-default-stages = "0.0.19"

fixed32 = "0.0.18"
tracing = "0.1.40"
int_math = "0.0.2"
monotonic-time-rs = "0.0.9"


[dev-dependencies]
test-log = "0.2.16"
