[package]
name = "mireforge-material"
version = "0.0.22"
edition = "2024"
repository = "https://github.com/mireforge/mireforge"
license = "MIT"
categories = ["game-development"]
description = "image asset loading and material creation"


[dependencies]
mireforge-wgpu-sprites = { path = "../wgpu-sprites", version = "0.0.22" }
mireforge-render-wgpu = { path = "../render-wgpu", version = "0.0.22" }


# Limnus
limnus-assets = "0.0.19"
limnus-asset-registry = "0.0.19"
limnus-assets-loader = "0.0.19"
limnus-app = "0.0.19"
limnus-resource = "0.0.19"
limnus-local-resource = "0.0.19"
limnus-wgpu-window = "0.0.19"
limnus-asset-id = "0.0.19"

tracing = "0.1.40"
image = "0.25.5"
