[package]
name = "mireforge"
version = "0.0.22"
edition = "2024"
license = "MIT"
description = "2D Game Engine"
repository = "https://github.com/mireforge/mireforge"
categories = ["game-development"]
keywords = ["game", "engine"]

[dependencies]
# Mireforge
mireforge-boot-game = { path = "../boot-game", version = "0.0.22" }
mireforge-boot-advanced-game = { path = "../boot-advanced-game", version = "0.0.22" }
mireforge-render-wgpu = { path = "../render-wgpu", version = "0.0.22" }
mireforge-game-assets = { path = "../game-assets", version = "0.0.22" }
mireforge-render = { path = "../render", version = "0.0.22" }
mireforge-game-audio = { path = "../game-audio", version = "0.0.22" }
mireforge-font = { path = "../font", version = "0.0.22" }
mireforge-game = { path = "../game", version = "0.0.22" }
mireforge-advanced-game = { path = "../advanced-game", version = "0.0.22" }
mireforge-material = { path = "../material", version = "0.0.22" }

# Limnus
limnus = { version = "0.0.19", default-features = false } # // TODO: should have a more minimal dependency
limnus-local-resource = "0.0.19"
limnus-resource = "0.0.19"
limnus-app = "0.0.19"
limnus-screen = "0.0.19"
limnus-system-params = "0.0.19"
limnus-wgpu-window = "0.0.19"
limnus-assets = "0.0.19"
limnus-gamepad = "0.0.19"
limnus-default-stages = "0.0.19"

monotonic-time-rs = "0.0.9"
fixed32 = "0.0.18"
int_math = "0.0.2"
tracing = "0.1.40"

[features]
audio = ["limnus/audio"]
default_schedulers = ["limnus/default_schedulers"]
default_keys = ["limnus/default_keys"]


default = ["audio", "default_schedulers", "default_keys"]
