[package]
name = "mireforge-render-wgpu"
version = "0.0.21"
edition = "2024"
license = "MIT"
description = "render pixel perfect 2D sprites"
repository = "https://github.com/mireforge/mireforge"
categories = ["game-development"]
keywords = ["game", "render"]

[dependencies]
# Mireforge
mireforge-font = { path = "../font", version = "0.0.21" }
mireforge-wgpu-sprites = { path = "../wgpu-sprites", version = "0.0.21" }
mireforge-render = { path = "../render", version = "0.0.21" }
mireforge-wgpu = { path = "../wgpu", version = "0.0.21" }

# Limnus
limnus-assets = "0.0.19"
limnus-app = "0.0.19"
limnus-resource = "0.0.19"
limnus-wgpu-math = "0.0.19"
limnus-system-params = "0.0.19"
limnus-screen = "0.0.19"
limnus-wgpu-window = "0.0.19"
limnus-clock ="0.0.19"
limnus-default-stages = "0.0.19"

tracing = "0.1.40"
wgpu = "26.0.1"
bytemuck = "1.19.0"
monotonic-time-rs = "0.0.9"
int_math = "0.0.2"
