[package]
name = "mireforge-render-wgpu"
version = "0.0.26"
edition = "2024"
license = "MIT"
description = "render pixel perfect 2D sprites"
repository = "https://github.com/mireforge/mireforge"
categories = ["game-development"]
keywords = ["game", "render"]

[dependencies]
# Mireforge
mireforge-font = { path = "../font", version = "0.0.26" }
mireforge-wgpu-sprites = { path = "../wgpu-sprites", version = "0.0.26" }
mireforge-render = { path = "../render", version = "0.0.26" }
mireforge-wgpu = { path = "../wgpu", version = "0.0.26" }

# Limnus
limnus-assets = "0.0.20"
limnus-app = "0.0.20"
limnus-resource = "0.0.20"
limnus-wgpu-math = "0.0.20"
limnus-system-params = "0.0.20"
limnus-screen = "0.0.20"
limnus-wgpu-window = "0.0.20"
limnus-clock ="0.0.20"
limnus-default-stages = "0.0.20"
limnus-local-resource = "0.0.20"

tracing = "0.1.40"
wgpu = "26.0.1"
bytemuck = "1.19.0"
monotonic-time-rs = "0.0.9"
int_math = "0.0.2"
