[package]
name = "swamp-render"
version = "0.0.17"
edition = "2024"
license = "MIT"
description = "standard render types for 2D"
repository = "https://github.com/swamp/swamp"
categories = ["game-development"]
keywords = ["game", "render"]

[dependencies]
int_math = "0.0.2"
monotonic-time-rs = "0.0.9"
