[package]
name = "swamp-asset-registry"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "keeps track of asset lifetimes"

[dependencies]
swamp-assets = { path = "../swamp-assets", version = "0.0.10" }
future-runner = "0.0.1"
swamp-app = { path = "../swamp-app", version = "0.0.10" }
swamp-assets-loader = { path = "../swamp-assets-loader", version = "0.0.10" }
swamp-loader = { path = "../swamp-loader", version = "0.0.10" }
swamp-loader-plugin = { path = "../swamp-loader-plugin", version = "0.0.10" }

message-channel = "0.0.1"
chunk-reader = "0.0.1"
tracing = "0.1.40"
