[package]
name = "swamp-assets"
version = "0.0.10"
edition = "2021"
license = "MIT"
description = "store assets in a slot map"
repository = "https://github.com/swamp/swamp"
categories = ["game-development"]
keywords = ["game", "asset", "storage"]

[dependencies]
sparse-slot = "0.0.1"
swamp-macros = { path = "../swamp-macros", version = "0.0.10" }
swamp-resource = { path = "../swamp-resource", version = "0.0.10" }
tracing = "0.1.40"
swamp-asset-id = { path = "../swamp-asset-id", version = "0.0.10" }
