[package]
name = "swamp-boot"
version = "0.0.9"
edition = "2021"

[dependencies]
swamp-app = { path = "../swamp-app", version = "0.0.9" }
swamp-window-runner = { path = "../swamp-window-runner", version = "0.0.9" }
swamp-wgpu-window = { path = "../swamp-wgpu-window", version = "0.0.9" }
swamp-log = { path = "../swamp-log", version = "0.0.9" }
swamp-assets-loader = { path = "../swamp-assets-loader", version = "0.0.9" }
swamp-loader-plugin = { path = "../swamp-loader-plugin", version = "0.0.9" }
swamp-asset-image = { path = "../swamp-material", version = "0.0.9" }
swamp-render-wgpu = { path = "../swamp-render-wgpu", version = "0.0.9" }
swamp-asset-registry = { path = "../swamp-asset-registry", version = "0.0.9" }
swamp-font = { path = "../swamp-font", version = "0.0.9" }
