[package]
name = "swamp-font"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "Font asset loading"


[dependencies]
bmf-parser = "0.0.1"

swamp-app = { path = "../swamp-app", version = "0.0.10" } # for the plugin
swamp-assets-loader = { path = "../swamp-assets-loader", version = "0.0.10" } # to get the loader registry
swamp-assets = { path = "../swamp-assets", version = "0.0.10" } # to insert the font
swamp-asset-registry = { path = "../swamp-asset-registry", version = "0.0.10" } # To get the asset name

tracing = "0.1.40"
int_math = "0.0.2"
