[package]
name = "swamp-game-wgpu"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "swamp game implementation using wgpu"

[dependencies]
int_math = "0.0.2" # only for exposing in prelude
wgpu = "23.0.0"
tracing = "0.1.40"

swamp-app = { path = "../swamp-app", version = "0.0.10" }
swamp-wgpu-window = { path = "../swamp-wgpu-window", version = "0.0.10" }
swamp-basic-input = { path = "../swamp-basic-input", version = "0.0.10" }
swamp-game = { path = "../swamp-game", version = "0.0.10" }
swamp-loader = { path = "../swamp-loader", version = "0.0.10" }
swamp-assets = { path = "../swamp-assets", version = "0.0.10" }
swamp-wgpu-sprites = { path = "../swamp-wgpu-sprites", version = "0.0.10" }
swamp-render-wgpu = { path = "../swamp-render-wgpu", version = "0.0.10" }
monotonic-time-rs = "0.0.5" # only for exposing in prelude
swamp-screen = { path = "../swamp-screen", version = "0.0.10" }
swamp-asset-registry = { path = "../swamp-asset-registry", version = "0.0.10" }
swamp-window = { path = "../swamp-window", version = "0.0.10" }
