[package]
name = "swamp-game"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "common swamp game types"


[dependencies]
tracing = "0.1.40"
int_math = "0.0.2"

swamp-render = { path = "../swamp-render", version = "0.0.10" }
swamp-render-wgpu = { path = "../swamp-render-wgpu", version = "0.0.10" }
swamp-assets = {path = "../swamp-assets", version = "0.0.10" }

swamp-basic-input = { path = "../swamp-basic-input", version = "0.0.10" }
monotonic-time-rs = "0.0.5"

[dev-dependencies]
test-log = "0.2.16"
