[package]
name = "swamp-game"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "common swamp game types"


[dependencies]
tracing = "0.1.40"
int_math = "0.0.2"

swamp-render = { path = "../swamp-render", version = "0.0.10" }
swamp-render-wgpu = { path = "../swamp-render-wgpu", version = "0.0.10" }
swamp-assets = { path = "../swamp-assets", version = "0.0.10" }

swamp-audio-sample = { path = "../audio-sample", version = "0.0.10" }

swamp-resource = { path = "../swamp-resource", version = "0.0.10" }

swamp-basic-input = { path = "../swamp-basic-input", version = "0.0.10" }
monotonic-time-rs = "0.0.5"
swamp-asset-registry = { path = "../swamp-asset-registry", version = "0.0.10" }


swamp-app = { path = "../swamp-app", version = "0.0.10" }
swamp-wgpu-window = { path = "../swamp-wgpu-window", version = "0.0.10" }
swamp-loader = { path = "../swamp-loader", version = "0.0.10" }
swamp-wgpu-sprites = { path = "../swamp-wgpu-sprites", version = "0.0.10" }
swamp-screen = { path = "../swamp-screen", version = "0.0.10" }
swamp-window = { path = "../swamp-window", version = "0.0.10" }

swamp-game-assets = { path = "../game-assets", version = "0.0.10" }

[dev-dependencies]
test-log = "0.2.16"
